examples/datalog/12_errors/11_float_precision_error.dl.out

Executing script: /Users/samuel.picek/InputLayer/FlowLog/course/final-project/examples/datalog/12_errors/11_float_precision.dl

> .db create test_float_precision
Database 'test_float_precision' created.
Switched to database: test_float_precision
> .db use test_float_precision
Switched to database: test_float_precision
> +scaled_floats[(1, 2, 3), (10, 20, 30), (100, 200, 300)].
Inserted 3 facts into 'scaled_floats'.
> view add_test(A: int, B: int, C: int, A+B: int) :- scaled_floats(A, B, C).
View 'add_test' registered.
> ?- add_test(A, B, C, Sum).
3 rows:
  (1, 2, 3, 3)
  (10, 20, 30, 30)
  (100, 200, 300, 300)
> +div_cases[(10, 3), (7, 2), (1, 3), (22, 7)].
Inserted 4 facts into 'div_cases'.
> view div_result(X: int, Y: int, X/Y: int) :- div_cases(X, Y).
View 'div_result' registered.
> ?- div_result(A, B, C).
4 rows:
  (1, 3, 0.3333333333333333)
  (7, 2, 3.5)
  (10, 3, 3.3333333333333335)
  (22, 7, 3.142857142857143)
> +compare_base[(100, 50)].
Inserted 1 fact into 'compare_base'.
> view equal_after_div(X: int, Y: int) :- compare_base(X, Y), X/2 = Y.
View 'equal_after_div' registered.
> ?- equal_after_div(X, Y).
Script error: Line 25: Query execution failed: Unsupported equality constraint pattern

