examples/datalog/12_errors/11_float_precision_error.dl
// Test: Floating Point Precision Edge Cases
// Category: Errors
// Verifies: Float comparison and precision issues

.db create test_float_precision
.db use test_float_precision

// Classic float precision issue: 0.1 + 0.2 != 0.3 in IEEE 754
// Using integers scaled by 10 to demonstrate the concept
+scaled_floats[(1, 2, 3), (10, 20, 30), (100, 200, 300)].

// Test addition precision
view add_test(A: int, B: int, C: int, A+B: int) :- scaled_floats(A, B, C).
?- add_test(A, B, C, Sum).

// Division that produces non-integer results
+div_cases[(10, 3), (7, 2), (1, 3), (22, 7)].
view div_result(X: int, Y: int, X/Y: int) :- div_cases(X, Y).
?- div_result(A, B, C).

// Test equality after arithmetic (potential precision issues)
+compare_base[(100, 50)].
// 100 / 2 should equal 50
view equal_after_div(X: int, Y: int) :- compare_base(X, Y), X/2 = Y.
?- equal_after_div(X, Y).

// Chained arithmetic
+chain_base[(12)].
view chain_result(X: int, X*2/2: int) :- chain_base(X).
?- chain_result(A, B).

// Cleanup
.db use default
.db drop test_float_precision
